Passing the trophy data
