# server/Server/Providers/CustomerProvider.cs
@@ -5,6 +5,7 @@ using Microsoft.EntityFrameworkCore;
 using Microsoft.Extensions.Options;
 using Server.Domain;
 using Server.Domain.Models;
+using Server.Domain.Scalars;
 using Server.Exceptions;
 using Server.Models;
 
@@ -49,7 +50,30 @@ public class CustomerProvider(BookRepoContext dbContext, IOptions<BetaTestOption
                     })]
                 })
             ],
-            Trophies =  [ ..customer.Trophies ]
+            Trophies = customer
+                .Trophies
+                .Select(
+                    x =>
+                        new TrophyData()
+                        {
+                            Trophy = x,
+                            Type = x switch
+                            {
+                                BetaTester => TrophyType.BetaTester,
+                                Alerter => TrophyType.Alerter,
+                                Contributor => TrophyType.Contributor,
+                                BookAddict => TrophyType.BookAddict,
+                                Sponsor => TrophyType.Sponsor,
+                                SharingIsCaring => TrophyType.SharingIsCaring,
+                                AvidReviewer => TrophyType.AvidReviewer,
+                                Commentator => TrophyType.Commentator,
+                                GoalScored => TrophyType.GoalScored,
+                                GoalSetter => TrophyType.GoalSetter,
+                                _ => throw new NotImplementedException()
+                            }
+                        }
+                )
+                .ToList()
         };
     }
 
